# a11y-audit

./: .gitignore  CLAUDE.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.claude/: settings.local.json
docs/: LIBRARY_ARCHITECTURE.md
docs/plans/: 2026-02-13-a11y-context-annotations-design.md  2026-02-13-a11y-context-annotations.md  2026-02-13-library-extraction.md  2026-02-13-phase1-rust-core-engine.md  2026-02-13-roadmap-v1.1-v2.0-design.md  2026-02-14-phase2-baseline-ratchet.md  2026-02-14-phase3-portals-opacity.md  2026-02-15-phase4-suggestions-cva.md
native/: Cargo.toml
native/scripts/: full_cross_validate.mts
native/src/: engine.rs  lib.rs  types.rs
native/src/math/: apca.rs  checker.rs  color_parse.rs  composite.rs  hex.rs  mod.rs  wcag.rs
native/src/parser/: annotation_parser.rs  class_extractor.rs  context_tracker.rs  current_color_resolver.rs  disabled_detector.rs  mod.rs  opacity.rs  tokenizer.rs  visitor.rs
native/tests/fixtures/: apca_values.json  colord_ratios.json  to_hex_values.json
oldDoc/: A11Y_AUDIT_TECHNICAL_ARCHITECTURE.md
scripts/: benchmark.mts
src/: index.ts
src/config/: defaults.ts  loader.ts  schema.ts
src/config/__tests__/: schema.test.ts
src/core/: baseline.ts  color-utils.ts  contrast-checker.ts  pipeline.ts  suggestions.ts  types.ts
src/core/__tests__/: baseline-integration.test.ts  baseline.io.test.ts  baseline.test.ts  color-utils.test.ts  integration.test.ts  (+6 more)
src/native/: converter.ts  index.ts
src/plugins/: interfaces.ts
src/types/: apca-w3.d.ts  culori.d.ts  public.ts
(+24 files in other folders)
