[package]
name = "a11y-audit-native"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi8", "serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csscolorparser = "0.7"
rayon = "1.10"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
